--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 #quote-box {
     width: 500px;
     padding: 2rem;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border-radius: 3px;
 }
 
